# CUDA-KMeans

./: Iris.cpp  KMeans_ArrayFire.cpp  KMeans_ArrayFire.h  KMeans_CUDA.cpp  KMeans_CUDA.cu  KMeans_CUDA.h  Main.cpp  PerformanceTester.cpp  README.md  iris.csv  main.cpp
Benchmark_ArrayFire/: KMeans_ArrayFire.cpp  KMeans_ArrayFire_Profile.cpp  README.md
Benchmark_scikit-learn/: KMeans_scikit-learn.py  README.md
Performance/: README.md
TestData/: README.md
benchmark_ArrayFire/: CMakeLists.txt  Iris_ArrayFire.cpp  KMeans_ArrayFire.cpp  KMeans_ArrayFire.h
benchmark_scikit-learn/: KMeans_scikit-learn.py
